After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 644223 - cannot change acceleration / sensitivity
cannot change acceleration / sensitivity
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Mouse
2.91.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
: 640015 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-03-08 17:28 UTC by Marcus Moeller
Modified: 2011-03-13 13:13 UTC
See Also:
GNOME target: 3.0
GNOME version: ---



Description Marcus Moeller 2011-03-08 17:28:31 UTC
Within the new control center, changing mouse/touchpad  acceleration and sensitivity does not have any direct effect until you leave and re-open the configuration dialog.

Besides that scrolling (right border / two fingers) settings on the Touchpad tab are not stored and have to be reconfigured every time you open the dialog.
Comment 1 Sebastian Keller 2011-03-13 13:13:42 UTC
*** Bug 640015 has been marked as a duplicate of this bug. ***