Mouse: set up scroll method radios initially

The panel was always coming up with scrolling disabled.
https://bugzilla.gnome.org/show_bug.cgi?id=644223